--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My second git project</title>
+    <style>
+        img{
+            width: 500px;
+            height: 500px;
+        }
+    </style>
 </head>
 <body>
     <h1>Bangladesh</h1>
-    <p>afdslakfjljasfjlljkfalkajflllklk</p>
+    <p>afdslakfjljasfjlljkfalkajflllklkjhgj</p>
+    <img src="1656384861960-01.jpg" alt="">
     
 </body>
 </html>
